<resources>
    <string name="app_name">Plantoterapia</string>
    <string name="str_tv_btn_entrar">Entrar</string>
    <string name="str_hint_email">E-mail</string>
    <string name="str_hint_senha">Senha</string>
    <string name="str_tv_nao_possui_conta">Não possui conta?</string>
    <string name="str_tv_btn_registrar_se">Registrar-se</string>
    <string name="str_hint_confirmar_senha">Confirmar Senha</string>
    <string name="str_tv_possui_conta">Já possui uma conta?</string>
    <string name="str_hint_titulo">Título</string>
    <string name="str_hint_descricao">Descrição</string>
    <string name="str_adicionar_item">Adicionar Item</string>
    <string name="str_text_conheca_description">Este sistema web é um projeto em conjunto com a professora de Química do IFES Serra, Nauvia.  Tem como objetivo democratizar o acesso ao conhecimento acerca das propriedades das plantas e seus diversos usos, incluindo presentes na horta do IFES</string>
    <string name="str_text_conheca_livro">Livro Química Orgânica - Professora Nauvia</string>
    <string name="str_sobre_jessica">Jessica Nogueira Duque é estudante do IFES Campus Serra, possui por volta dos 17 anos e é uma das desenvolvedoras desse projeto.</string>
    <string name="str_sobre_amanda">Amanda de Góes Pires é estudante do IFES Campus Serra, possui por volta dos 18 anos e é uma das desenvolvedoras desse projeto.</string>
    <string name="str_sobre_sophia">Sophia Caetano Marques Souza é estudante do IFES Campus Serra, possui por volta dos 18 anos e é uma das desenvolvedoras desse projeto.</string>
    <string name="str_sobre_nauvia">Nauvia Maria Cancelieri é professora de química no IFES Campus Serra e colaboradora do projeto.</string>
    <string name="str_btn_estruturas_quimicas">Estruturas Químicas</string>
    <string name="str_btn_modos_plantio">Modos de Plantio</string>
    <string name="str_btn_receitas">Receitas</string>
</resources>