<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#B6F1CE"
    tools:context=".CadastroActivity">

    <View
        android:id="@+id/vCadastro"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="120dp"
        android:layout_marginEnd="8dp"
        android:layout_marginBottom="120dp"
        android:background="#F5C3DC"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="1.0" />

    <EditText
        android:id="@+id/etCadastroSenhaConf"
        android:layout_width="270dp"
        android:layout_height="48dp"
        android:layout_marginTop="24dp"
        android:background="@drawable/bg_textview"
        android:ems="10"
        android:fontFamily="@font/playfair_display"
        android:hint="@string/str_hint_confirmar_senha"
        android:inputType="textPassword"
        android:minHeight="48dp"
        android:textAllCaps="false"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="@+id/vCadastro"
        app:layout_constraintHorizontal_bias="0.496"
        app:layout_constraintStart_toStartOf="@+id/vCadastro"
        app:layout_constraintTop_toBottomOf="@+id/etCadastroSenha" />

    <EditText
        android:id="@+id/etCadastroEmail"
        android:layout_width="270dp"
        android:layout_height="48dp"
        android:layout_marginTop="32dp"
        android:background="@drawable/bg_textview"
        android:ems="10"
        android:fontFamily="@font/playfair_display"
        android:hint="@string/str_hint_email"
        android:inputType="textEmailAddress"
        android:minHeight="48dp"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="@+id/vCadastro"
        app:layout_constraintStart_toStartOf="@+id/vCadastro"
        app:layout_constraintTop_toBottomOf="@+id/tvRegistrar" />

    <EditText
        android:id="@+id/etCadastroSenha"
        android:layout_width="270dp"
        android:layout_height="48dp"
        android:layout_marginTop="24dp"
        android:background="@drawable/bg_textview"
        android:ems="10"
        android:fontFamily="@font/playfair_display"
        android:hint="@string/str_hint_senha"
        android:inputType="textPassword"
        android:minHeight="48dp"
        android:textAllCaps="false"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="@+id/vCadastro"
        app:layout_constraintHorizontal_bias="0.504"
        app:layout_constraintStart_toStartOf="@+id/vCadastro"
        app:layout_constraintTop_toBottomOf="@+id/etCadastroEmail" />

    <TextView
        android:id="@+id/tvRegistrar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:fontFamily="@font/playfair_display"
        android:text="@string/str_tv_btn_registrar_se"
        android:textColor="#000000"
        android:textSize="48sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="@+id/vCadastro"
        app:layout_constraintStart_toStartOf="@+id/vCadastro"
        app:layout_constraintTop_toTopOf="@+id/vCadastro" />

    <Button
        android:id="@+id/btnRegistrar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:layout_marginBottom="8dp"
        android:background="@drawable/bg_textview"
        android:fontFamily="@font/playfair_display"
        android:text="@string/str_tv_btn_registrar_se"
        android:textAllCaps="false"
        android:textColor="#000000"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="@+id/vCadastro"
        app:layout_constraintEnd_toEndOf="@+id/vCadastro"
        app:layout_constraintStart_toStartOf="@+id/vCadastro"
        app:layout_constraintTop_toBottomOf="@+id/etCadastroSenhaConf" />

    <TextView
        android:id="@+id/tvPossui"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:fontFamily="@font/playfair_display"
        android:text="@string/str_tv_possui_conta"
        android:textColor="#000000"
        android:textSize="16sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/btnLogin"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/vCadastro" />

    <Button
        android:id="@+id/btnLogin"
        android:layout_width="wrap_content"
        android:layout_height="48dp"
        android:layout_marginBottom="8dp"
        android:background="@drawable/bg_textview"
        android:fontFamily="@font/playfair_display"
        android:text="@string/str_tv_btn_entrar"
        android:textAllCaps="false"
        android:textColor="#23259F"
        android:textSize="14sp"
        android:textStyle="bold"
        app:iconTint="#FF8585"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.391"
        app:layout_constraintStart_toEndOf="@+id/tvPossui"
        app:layout_constraintTop_toBottomOf="@+id/vCadastro" />

</androidx.constraintlayout.widget.ConstraintLayout>