<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#F5C3DC"
    tools:context=".PlantaActivity">

    <TextView
        android:id="@+id/tvPlantaTitulo2"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:text="TextView"
        android:textSize="24sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imvPlantaFoto2" />

    <ImageView
        android:id="@+id/imvPlantaFoto2"
        android:layout_width="150dp"
        android:layout_height="150dp"
        android:layout_marginTop="8dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/ic_baseline_insert_photo_24"
        tools:srcCompat="@tools:sample/avatars" />

    <TextView
        android:id="@+id/tvPlantaDescricao"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginBottom="1dp"
        android:text="TextView"
        app:layout_constraintBottom_toTopOf="@+id/btnEstruturasQuimicas"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tvPlantaTitulo2" />

    <Button
        android:id="@+id/btnModosPlantio"
        android:layout_width="250dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="1dp"
        android:text="@string/str_btn_modos_plantio"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btnEstruturasQuimicas" />

    <Button
        android:id="@+id/btnEstruturasQuimicas"
        android:layout_width="250dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="2dp"
        android:text="@string/str_btn_estruturas_quimicas"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.496"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tvPlantaDescricao" />

    <Button
        android:id="@+id/btnReceitas"
        android:layout_width="250dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="1dp"
        android:layout_marginBottom="8dp"
        android:text="@string/str_btn_receitas"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btnModosPlantio" />
</androidx.constraintlayout.widget.ConstraintLayout>