<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#B6F1CE"
    tools:context=".SobreNosActivity">

    <ImageView
        android:id="@+id/imvJessica"
        android:layout_width="200dp"
        android:layout_height="150dp"
        android:layout_marginTop="8dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tbSobreNos"
        app:srcCompat="@mipmap/jessica"
        tools:srcCompat="@mipmap/jessica" />

    <TextView
        android:id="@+id/tvJessica"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="8dp"
        android:background="@drawable/bg_textview"
        android:fontFamily="sans-serif"
        android:text="@string/str_sobre_jessica"
        android:textAlignment="viewStart"
        android:textSize="16sp"
        app:layout_constraintBottom_toTopOf="@+id/tvAmanda"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/imvJessica"
        app:layout_constraintTop_toBottomOf="@+id/tbSobreNos" />

    <ImageView
        android:id="@+id/imvAmanda"
        android:layout_width="200dp"
        android:layout_height="150dp"
        android:layout_marginTop="8dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imvJessica"
        app:srcCompat="@mipmap/amanda"
        tools:srcCompat="@mipmap/amanda" />

    <TextView
        android:id="@+id/tvAmanda"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="8dp"
        android:background="@drawable/bg_textview"
        android:text="@string/str_sobre_amanda"
        android:textSize="16sp"
        app:layout_constraintBottom_toTopOf="@+id/tvSophia"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toEndOf="@+id/imvAmanda"
        app:layout_constraintTop_toBottomOf="@+id/tvJessica" />

    <ImageView
        android:id="@+id/imvSophia"
        android:layout_width="200dp"
        android:layout_height="150dp"
        android:layout_marginTop="8dp"
        android:src="@mipmap/sophia"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imvAmanda"
        tools:src="@mipmap/sophia"
        tools:srcCompat="@mipmap/sophia" />

    <TextView
        android:id="@+id/tvSophia"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="8dp"
        android:background="@drawable/bg_textview"
        android:text="@string/str_sobre_sophia"
        android:textSize="16sp"
        app:layout_constraintBottom_toTopOf="@+id/tvNauvia"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toEndOf="@+id/imvSophia"
        app:layout_constraintTop_toBottomOf="@+id/tvAmanda" />

    <ImageView
        android:id="@+id/imageView4"
        android:layout_width="150dp"
        android:layout_height="150dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="-12dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imvSophia"
        app:srcCompat="@mipmap/nauvia" />

    <TextView
        android:id="@+id/tvNauvia"
        android:layout_width="186dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="8dp"
        android:background="@drawable/bg_textview"
        android:text="@string/str_sobre_nauvia"
        android:textSize="16sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toEndOf="@+id/imageView4"
        app:layout_constraintTop_toBottomOf="@+id/tvSophia"
        app:layout_constraintVertical_bias="0.354" />

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/tbSobreNos"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:background="?attr/colorPrimary"
        android:minHeight="?attr/actionBarSize"
        android:theme="?attr/actionBarTheme"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>